[package]
name = "auth-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "auth-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ak_ffi = { path = "../../../ak-ffi" }
tauri = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"
