[package]
name = "auth-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "auth-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ak_ffi = { path = "../../../ak-ffi" }
ak-platform = { path = "../../../ak-platform" }
tauri = { version = "2", features = [] }
log = "0.4"
simplelog = "0.12"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"
